--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 #contact-sidebar {
-    width: 50%;
-    float: right;
     position: sticky;
     top: 10px; 
+    width: 90%;
+    margin: 10% 5%;
 }
 #contact-sidebar .card-img {
     border-radius: 0px !important;
