--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
 #contact-sidebar {
-    position: sticky;
-    top: 10px; 
-    width: 90%;
-    margin: 10% 5%;
+    width: 180px;
+    margin: 10px;
+    float: left;
 }
 #contact-sidebar .card-img {
     border-radius: 0px !important;
+}
+
+#contact-area {
+    width: 400px;
+    height: 400px;
+    border-left: 1px solid black;
+    float: right;
 }
