--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,14 @@
+#contact-header {
+    height: 40px;
+    border-bottom: 1px solid lightgray;
+    padding-left: 10px;
+}
+
 #contact-sidebar {
+    position: absolute;
+    top: 40px;
     width: 180px;
     margin: 10px;
-    float: left;
 }
 #contact-sidebar .card-img {
     border-radius: 0px !important;
@@ -9,7 +16,8 @@
 
 #contact-area {
     width: 400px;
-    height: 400px;
-    border-left: 1px solid black;
+    margin: 50px 0px 10px 0px;
+    padding-left: 10px;
+    border-left: 1px solid lightgray;
     float: right;
 }
