--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 
 #contact-area {
     width: 400px;
-    margin: 50px 0px 10px 0px;
+    margin-left: 10px;
     padding-left: 10px;
     border-left: 1px solid lightgray;
     float: right;
