Added capablity to send contacts back to index.
Proof of concept, index does not look good.

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@
     border-radius: 0px !important;
 }
 
+#contact-sidebar-select:hover {
+    background-color: lightgray;
+}
+
 #contact-area {
     width: 400px;
     margin-left: 10px;
